express-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-api-service
  namespace: haruka
spec:
  selector:
    app: express-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
